--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,14 @@
 *~
 *.tar
-test_custard_read
-test_custard_write
-test_inband
 cut
-test_boost_custard_read
-test_boost_custard_write
 *.od
 diffit
 bin
-test
 *.d
 junk*
 cut*
 *.npy
-test_qi
-test_miniz
-test_minizw
 *.d.*
 *.pixz
 *.zip
+builddir
